# ifood-case

./: ETL.py  External_Table_Create.sql  Questions(parte 2).ipynb  README.md  cria_origem.py  pyproject.toml
gold/Question_1.parquet/: part-00000-4b1024db-02af-4d7c-a066-938ce3f80397-c000.snappy.parquet
gold/Question_2.parquet/: part-00000-af1cb34d-449f-4f83-9ee7-37719beeccab-c000.snappy.parquet
gold/Question_22.parquet/: part-00000-f7afd5cc-2f0b-42af-824c-385200595ab0-c000.snappy.parquet
